setted better path

--- a/Documentation/10613915_10599689.tex
+++ b/Documentation/10613915_10599689.tex
@@ -24,7 +24,7 @@
   \texttt{matricola 10599689}
 }
 
-\graphicspath{ {./graphics} }
+\graphicspath{ {./graphics/} }
 
 \makeindex
 
@@ -94,7 +94,7 @@ Lo stato \texttt{GET\_DIM} è lo stato che si preoccupa di aggiornare il segnale
 Lo stato \texttt{READ\_PIXEL} è uno stato strettamente accopiato con lo stato \texttt{GET\_MINMAX}. Richiede alla memoria il valore del pixel e aggiorna il segnale \texttt{curr\_address} a quello successivo. In questo modo il valore del pixel sarà disponibile sul segnale \texttt{i\_data} al \texttt{rising\_edge} successivo.
 
 \subsubsection{GET\_MINMAX}
-Write somenthing here
+Write somenthing here.
 
 \subsubsection{GET\_DELTA}
 Write somenthing here
@@ -109,7 +109,7 @@ Write somenthing here
 Write somenthing here
 
 \subsubsection{WRITE\_PIXEL}
-Write somenthing here
+Write somenthing here.
 
 \subsubsection{DONE}
 Write somenthing here
