--- a/Documentation/10613915_10599689.tex
+++ b/Documentation/10613915_10599689.tex
@@ -14,6 +14,14 @@
 \usepackage{graphicx}
 \usepackage[colorlinks=true, allcolors=black]{hyperref}
 \usepackage{makeidx}
+\usepackage{tikz}
+\usepackage{algorithm}
+\usepackage{algorithmicx}
+\usepackage{algpseudocode}
+\usepackage{mathtools}
+\usepackage{varwidth}
+\usetikzlibrary{shapes.geometric, arrows}
+\DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
 \title{Progetto di Reti Logiche}
 \author{
@@ -24,6 +32,8 @@
   \texttt{matricola 10599689}
 }
 
+\date{Anno 2020/21}
+
 \graphicspath{ {./graphics/} }
 
 \makeindex
@@ -33,7 +43,6 @@
 \begin{figure}[t]
   \centering
   \vspace{3cm}
-  %\includegraphics[width=65mm , height= 47mm]{Logo_Politecnico_Milano.png}
   \includegraphics[scale=0.4]{Logo_Politecnico_Milano.png}
   \vspace{3cm}
 \end{figure}
@@ -42,20 +51,74 @@
 \renewcommand{\abstractname}{ }
 \begin{abstract}
   \centering
-  Progetto sostenuto presso il Politecnico di Milano dipartimento di Elettronica, Informazione e Bioingegneria, diretto dal professor Gianluca Palermo nell'anno 2020/21.
+  Progetto sostenuto presso il Politecnico di Milano - Dipartimento di Elettronica, Informazione e Bioingegneria. Corso diretto dal Prof. Gianluca Palermo.
 \end{abstract}
 
+\thispagestyle{empty}
 \pagebreak
 \tableofcontents
+\thispagestyle{empty}
 \pagebreak
+\pagenumbering{arabic}
 
 
 \section{Introduzione}
 \subsection{Scopo del progetto}
-Write somenthing here
+Lo scopo del progetto è quello di creare un componente hardware sintetizzabile, in grado di equalizzare un immagine. L'algoritmo che ne prevede l'equalizzazione si ispira ad una versione semplificata del metodo di equalizzazione dell'istogramma, il quale prevede un aumento nel contrasto di un immagine su scala di grigi. In generale l'elaborazione digitale dell'immagine risulta più evidente specialmente quando i dati raccolti sono rappresentati da valori di intensità molto vicini. Per cui, se una immagine contenesse una scala di grigi molto ampia, l'effeto dell'equalizzazione risulterebbe pressochè nullo.
 
 \subsection{Specifiche generali}
-Write somenthing here
+Si definisca un immagine dalle dimensioni variabili, ma di massimo $128 \times 128$, e si definisca una memoria lineare nella quale i primi due valori siano le dimensioni dell'immagine e i restanti i valori assegnati ad ogni pixel, il componente hardware dovrà scrivere in coda alla memoria l'immagine equalizzata pixel per pixel.
+Il risultato sarà una memoria complessivamente lunga $2 \cdot N_{col} \cdot N_{row} +2$, dove $N_{row}$ e $N_{col}$ sono rispettivamente il numero di righe e di colonne dell'immagine. A partire dalla posizione 2, per ogni pixel si avrà il corrispettivo pixel equalizzato ad una distanza $N_{col} \cdot N_{row}$ come mostrato in figura.
+\\
+\\
+
+\begin{tikzpicture}
+\draw[step=1cm, black,very thin] (0,0) grid (13,1);
+\fill[text=black] (0.5,0.5) node{$N_{col}$};
+\fill[text=black] (0.5,1.3) node{$0$};
+\fill[text=black] (1.5,0.5) node{$N_{row}$};
+\fill[text=black] (1.5,1.3) node{$1$};
+\fill[blue!30!white, draw=black] (2,0) rectangle (3,1);
+\fill[text=black] (2.5,1.3) node{$2$};
+\fill[green!30!white, draw=black] (3,0) rectangle (4,1);
+\fill[text=black] (3.5,1.3) node{$3$};
+\fill[red!30!white, draw=black] (4,0) rectangle (5,1);
+\fill[text=black] (4.5,1.3) node{$4$};
+\fill[text=black] (5.5,0.5) node{\dots};
+\fill[text=black] (6.5,0.5) node{\dots};
+\fill[text=black] (7.5,0.5) node{\dots};
+\fill[blue!30!white, draw=black] (8,0) rectangle (9,1);
+\fill[text=black] (8.5,1.3) node{$N_{col}\cdot N_{row}+2$};
+\fill[text=black] (8.5,-0.5) node{\texttt{new\_pixel}};
+\fill[green!30!white, draw=black] (9,0) rectangle (10,1);
+\fill[red!30!white, draw=black] (10,0) rectangle (11,1);
+\fill[text=black] (11.5,0.5) node{\dots};
+\end{tikzpicture}
+\\
+La memoria dialogherà in stretto contatto con il componente attraverso due segnali, che determineranno l'avvio della computazione, la sua terminazione e l'eventuale ripartenza. Si noti che la computazione di un immagine, una volta iniziata, non potrà mai essere interrotta, ma rimane possibile la computazione di più immagini.\\
+\\
+Ogni pixel avrà un valore compreso tra $0$ e $255$ e verrà rielaborato dal componente nel seguente modo:\\
+
+\noindent\fbox{%
+\begin{varwidth}{\dimexpr\linewidth-2\fboxsep-2\fboxrule\relax}
+
+\begin{algorithmic}[1]
+  \State $delta\_value \gets max\_pixel\_value - min\_pixel\_value$
+  \State $shift\_level \gets 8 - \floor{\log_2(delta\_value+1)}$
+  \State $temp\_pixel \gets curr\_pixel\_value - min\_pixel\_value$
+  \State $temp\_pixel \gets temp\_pixel << shift\_level$
+  \If{$temp\_pixel > 255$}
+    \State $new\_pixel \gets 255$
+  \Else
+    \State $new\_pixel \gets temp\_pixel$
+  \EndIf
+\end{algorithmic}
+
+\end{varwidth}%
+}
+
+
+
 
 \subsection{Interfaccia del componente}
 Write somenthing here
