--- a/Documentation/10613915_10599689.tex
+++ b/Documentation/10613915_10599689.tex
@@ -116,6 +116,8 @@ Ogni pixel avrà un valore compreso tra $0$ e $255$ e verrà rielaborato dal com
 
 \end{varwidth}%
 }
+\\
+dove \texttt{max\_pixel\_value} e \texttt{min\_pixel\_value} sono rispettivamente il valore massimo e il valore minimo trova 
 
 
 
